--- a/comics/comic_top.html
+++ b/comics/comic_top.html
@@ -4,31 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="img/jpg" href="../image/icon.jpg">
 
-    <style media="screen">
-        .light_pink{
-            background: rgb(248, 231, 234);
-        }
-
-        .light_green{
-            background: rgb(226, 255, 225);
-        }
-    </style>
-
-    <link rel="stylesheet" href="../css/space.css">
-    <title>Document</title>
+    <title>漫画｜こはく</title>
 </head>
-<body class="light_pink">
+<body>
+    <header class="head">
+        <h2>
+            <a href="../index.html"><img src="../image/kohaku.jpg"></a>
+        </h2>
+        <nav class="toplogo">
+            <ul>
+                <li><a href="../plofille/plofile_top.html">Plofile</a></li>
+                <li><a href="../paint/paint_top.html">Illust</a></li>
+                <li><a href="../code/code_top.html">Program</a></li>
+                <li>Comic</li>
+                <li><a href="../anime/anime_top.html">Anime</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <div class="spaceber"><a href="../index.html">もどる</a></div>
+
     <div class="w-50 mx-auto link_box_padding">
-    <div class="card">
-    <div class="light_green">
-    <div class="text-center">
-        ここは漫画のページです<br>
-        <a href="#kirara">きらら作品</a><br>
-        <a href="#others">その他作品</a>
-    </div>
-    </div>
-    </div> 
+        <div class="card">
+            <div class="text-center">
+                <h4>
+                    持っている漫画を紹介するページです!!<br>
+                    リンクはただいま準備中<br>
+                    <a href="#kirara">きらら作品</a><br>
+                    <a href="#others">その他作品</a>
+                </h4>
+            </div>
+        </div> 
     </div>
 
     <div id="kirara"></div>
