--- a/index.html
+++ b/index.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="img/jpg" href="image/icon.jpg">
 
-    <style media="screen">
-        .skyblue{
-            background: skyblue;
-            height: 100px;
-            text-align: center;
-            line-height: 100px;
-        }
-        .pink{
-            background: pink;
-            height: 100px;
-            text-align: center;
-            line-height: 100px;
-        }
-    </style>
-
-    <title>homepage</title>
+    <title>こはく｜トップページ</title>
 </head>
 <body>
+    <header class="head">
+        <h2>
+            <a href="index.html"><img src="image/kohaku.jpg" alt="topにもどる"></a>
+        </h2>
+        <nav class="toplogo">
+            <ul>
+                <li><a href="plofille/plofile_top.html">Plofile</a></li>
+                <li><a href="paint/paint_top.html">Illust</a></li>
+                <li><a href="code/code_top.html">Program</a></li>
+                <li><a href="comics/comic_top.html">Comic</a></li>
+                <li><a href="anime/anime_top.html">Anime</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="resp">
         <div class="topimg">
             <div class="fadein">
@@ -30,7 +31,7 @@
             </div>
         </div>
         <div class="logo">
-            <img src="image/kohaku.jpg">
+            <img src="image/logo.jpg">
         </div>
         <div class="sub1">
             <a href="paint/paint_top.html">
@@ -38,7 +39,7 @@
             </a>
         </div>
         <div class="sub2">
-            <a href="">
+            <a href="plofille/plofile_top.html">
                 <img src="image/plofile.jpg">
             </a>
         </div>
@@ -48,21 +49,28 @@
             </a>
         </div>
         <div class="sub4">
-            <a href="">
+            <a href="comics/comic_top.html">
                 <img src="image/comicanime.jpg">
             </a>
         </div>
         <div class="sub5">
-            NEWS<br>
-            xxxx.xx.xx 開設
+            にゅ～す<br>
+            xxxx.xx.xx 開設<br>
         </div>
         <div class="sub6">
-            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300" data-theme="light" href="https://twitter.com/chappie1824?ref_src=twsrc%5Etfw">
+            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/chappie1824?ref_src=twsrc%5Etfw">
                 Tweets by chappie1824</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 
+    <!-- 
+        漫画リンク先
+        プログラムページ
+        イラストページ紹介
+        漫画ページ紹介
+        アニメページ紹介
+     -->
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
