--- a/plofille/plofile_top.html
+++ b/plofille/plofile_top.html
@@ -7,29 +7,24 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="img/jpg" href="../image/icon.jpg">
     
-
     <style media="screen">
-        .light_pink{
+        .light-pink{
             background: rgb(248, 231, 234);
         }
     </style>
 
-    <title>プログラム｜こはく</title>
+    <title>プロフィール｜こはく</title>
 </head>
 <body>
-    <!-- 
-        素数大富豪探索
-        素数大富豪対戦
-     -->
-     <header class="head">
+    <header class="head">
         <h2>
             <a href="../index.html"><img src="../image/kohaku.jpg"></a>
         </h2>
         <nav class="toplogo">
             <ul>
-                <li><a href="../plofille/plofile_top.html">Plofile</a></li>
+                <li>Plofile</li>
                 <li><a href="../paint/paint_top.html">Illust</a></li>
-                <li>Program</li>
+                <li><a href="../code/code_top.html">Program</a></li>
                 <li><a href="../comics/comic_top.html">Comic</a></li>
                 <li><a href="../anime/anime_top.html">Anime</a></li>
             </ul>
@@ -38,30 +33,26 @@
 
     <div class="spaceber"><a href="../index.html">もどる</a></div>
 
-    <div class="w-50 mx-auto link_box_padding">
-        <div class="card">
-            <div class="light_green">
-                <div class="text-center">
-                    <h4>私が書いたコード等を紹介するページです!!<br>
-                    ただいま準備中
-                    </h4>
-                </div>
-            </div>
-        </div> 
-    </div>
-    
-    <div class="w-75 mx-auto">
-    <div class="card-deck">
-        <div class="card" style="width: 50%;">
-            <div class="card-body">
-                <h3>素数大富豪用<br>素数探索プログラム</h3>
+    <div class="plofile">
+        <div class="plo-text">
+            <h1>こはく</h1><br>
+            <div class="plo-li">
+                【年齢】??歳<br>
+                【誕生日】8月22日<br>
+                【星座】獅子座<br>
+                【血液型】O型<br>
+                【好きな科目】数学<br>
+                【苦手な科目】歴史<br>
+                【好きな食べ物】甘いもの<br>
+                【苦手な食べ物】きのこ、ねばねば
             </div>
         </div>
-    </div>    
+        <div class="plo-img">
+            <img src="image/plofile1.jpg">
+        </div>
     </div>
 
-    <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript+" src="../js/jquery.js"></script>
     <script type="text/javascript" src="../js/bootstrap.bundle.js"></script>
-
 </body>
 </html>
