--- a/templa.html
+++ b/templa.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="img/jpg" href="../image/icon.jpg">
     
     <style media="screen">
         .light-pink{
@@ -15,8 +17,8 @@
 </head>
 <body>
 
-    <script type="text/javascript+" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+    <script type="text/javascript+" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
 
@@ -50,3 +52,19 @@
         </div>
     </a>
 </div>
+
+
+<header class="head">
+    <h2>
+        <a href="../index.html"><img src="../image/kohaku.jpg"></a>
+    </h2>
+    <nav class="toplogo">
+        <ul>
+            <li><a href="../plofille/plofile_top.html">Plofile</a></li>
+            <li><a href="../paint/paint_top.html">Illust</a></li>
+            <li><a href="../code/code_top.html">Program</a></li>
+            <li><a href="../comics/comic_top.html">Comic</a></li>
+            <li><a href="../anime/anime_top.html">Anime</a></li>
+        </ul>
+    </nav>
+</header>
