--- a/paint/paint_top.html
+++ b/paint/paint_top.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="img/jpg" href="../image/icon.jpg">
 
     <style media="screen">
         .light_pink{
@@ -11,22 +13,41 @@
         }
     </style>
 
-    <link rel="stylesheet" href="../css/space.css">
-    <title>Document</title>
+    <title>イラスト｜こはく</title>
 </head>
-<body class="light_pink">
+<body>
+
+    <header class="head">
+        <h2>
+            <a href="../index.html"><img src="../image/kohaku.jpg"></a>
+        </h2>
+        <nav class="toplogo">
+            <ul>
+                <li><a href="../plofille/plofile_top.html">Plofile</a></li>
+                <li>Illust</li>
+                <li><a href="../code/code_top.html">Program</a></li>
+                <li><a href="../comics/comic_top.html">Comic</a></li>
+                <li><a href="../anime/anime_top.html">Anime</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="spaceber"><a href="../index.html">もどる</a></div>
     
     <div class="w-50 mx-auto link_box_padding">
         <div class="card">
-        <div class="light_green">
-        <div class="text-center">
-            ここはイラストのページです<br>
-            <a href="#illustration">二次創作　イラスト</a><br>
-            <a href="#comic">二次創作　漫画</a>
-        </div>
-        </div>
+            <div class="light_green">
+                <div class="text-center">
+                    <h4>
+                    私が描いたイラストのページです!!<br>
+                    各リンクはpixivに飛びます!<br>
+                    <a href="#illustration">二次創作　イラスト</a><br>
+                    <a href="#comic">二次創作　漫画</a>
+                    </h4>
+                </div>
+            </div>
         </div> 
-        </div>
+    </div>
 
     <div class="w-75 mx-auto">
     <div id="illustration"></div>
