--- a/code/code_top.html
+++ b/code/code_top.html
@@ -43,6 +43,7 @@
             <div class="light_green">
                 <div class="text-center">
                     <h4>私が書いたコード等を紹介するページです!!<br>
+                    githubアカウント→<a href="https://github.com/Kohaku0822">こちら</a><br>
                     ただいま準備中
                     </h4>
                 </div>
