--- a/index.html
+++ b/index.html
@@ -55,21 +55,19 @@
         </div>
         <div class="sub5">
             にゅ～す<br>
-            xxxx.xx.xx 開設<br>
+            2020.11.xx 開設<br>
         </div>
         <div class="sub6">
-            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/chappie1824?ref_src=twsrc%5Etfw">
-                Tweets by chappie1824</a>
+            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/kohaku2208?ref_src=twsrc%5Etfw">
+                Tweets by kohaku2208</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
+        
     </div>
 
     <!-- 
         漫画リンク先
         プログラムページ
-        イラストページ紹介
-        漫画ページ紹介
-        アニメページ紹介
      -->
 
     <script type="text/javascript" src="js/jquery.js"></script>
