--- a/plofille/plofile_top.html
+++ b/plofille/plofile_top.html
@@ -44,7 +44,11 @@
                 【好きな科目】数学<br>
                 【苦手な科目】歴史<br>
                 【好きな食べ物】甘いもの<br>
-                【苦手な食べ物】きのこ、ねばねば
+                【苦手な食べ物】きのこ、ねばねば<br><br>
+                各種リンク<br>
+                【<a href="https://twitter.com/kohaku2208">Twitter</a>】<br>
+                【<a href="https://www.pixiv.net/users/6404429">pixiv</a>】<br>
+                【<a href="https://github.com/Kohaku0822">github</a>】
             </div>
         </div>
         <div class="plo-img">
