--- a/plofille/plofile_top.html
+++ b/plofille/plofile_top.html
@@ -46,7 +46,7 @@
                 【好きな食べ物】甘いもの<br>
                 【苦手な食べ物】きのこ、ねばねば<br><br>
                 各種リンク<br>
-                【<a href="https://twitter.com/kohaku2208">Twitter</a>】<br>
+                【<a href="https://twitter.com/kohaku_chan_589">Twitter</a>】<br>
                 【<a href="https://www.pixiv.net/users/6404429">pixiv</a>】<br>
                 【<a href="https://github.com/Kohaku0822">github</a>】
             </div>
