--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
         <div class="sub5">
             にゅ～す<br>
-            2020.11.xx 開設<br>
+            2020.11.21 開設<br>
         </div>
         <div class="sub6">
-            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/kohaku2208?ref_src=twsrc%5Etfw">
+            <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/kohaku_chan_589?ref_src=twsrc%5Etfw">
                 Tweets by kohaku2208</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
