--- a/paint/paint_top.html
+++ b/paint/paint_top.html
@@ -52,12 +52,44 @@
     <div class="w-75 mx-auto">
     <div id="illustration"></div>
     <h3>二次創作　イラスト</h3>
+
     <div class="card-deck">
-        <a href="" class="card">
+        <a href="#" class="card">
             <img src="" alt="" class="card-img-top">
             <div class="card-body">
                 <h3 class="card-title">準備中</h3>
                 <p class="card-text"></p>
+            </div>
+        </a>
+        <a href="#" class="card">
+            <img src="" alt="" class="card-img-top">
+            <div class="card-body">
+                <h3 class="card-title">準備中</h3>
+                <p class="card-text"></p>
+            </div>
+        </a>
+        <a href="https://www.pixiv.net/artworks/87252566" class="card">
+            <img src="paint_img/painting/32.png" alt="" class="card-img-top">
+            <div class="card-body">
+                <h3 class="card-title">中須かすみ</h3>
+                <p class="card-text">虹ヶ咲学園スクールアイドル同好会</p>
+            </div>
+        </a>
+        <a href="https://www.pixiv.net/artworks/87050171" class="card">
+            <img src="paint_img/painting/31.png" alt="" class="card-img-top">
+            <div class="card-body">
+                <h3 class="card-title">中野梓</h3>
+                <p class="card-text">けいおん！</p>
+            </div>
+        </a>
+    </div>
+
+    <div class="card-deck">
+        <a href="https://www.pixiv.net/artworks/86723342" class="card">
+            <img src="paint_img/painting/30.png" alt="" class="card-img-top">
+            <div class="card-body">
+                <h3 class="card-title">平沢唯</h3>
+                <p class="card-text">けいおん！</p>
             </div>
         </a>
         <a href="https://www.pixiv.net/artworks/85025578" class="card">
