--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <div class="sub5">
             にゅ～す<br>
             2020.11.21 開設<br>
+            2021.01.26 イラスト更新<br>
         </div>
         <div class="sub6">
             <a class="twitter-timeline" data-chrome=”nofooternoheader” data-width="100%" data-height="300px" data-theme="light" href="https://twitter.com/kohaku_chan_589?ref_src=twsrc%5Etfw">
-                Tweets by kohaku2208</a>
+                Tweets by kohaku</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
         
