--- a/anime/anime_top.html
+++ b/anime/anime_top.html
@@ -39,6 +39,9 @@
                 <h4>見たアニメを紹介するページです!!<br>
                 リンクは公式サイトに飛びます!!<br>
                 </h4>
+                <h3>
+                    持ってる漫画のリンクは<a href="../comics/comic_top.html">こちら！</a>
+                </h3>
             </div>
         </div> 
     </div>
