--- a/comics/comic_top.html
+++ b/comics/comic_top.html
@@ -37,6 +37,9 @@
                     <a href="#kirara">きらら作品</a><br>
                     <a href="#others">その他作品</a>
                 </h4>
+                <h3>
+                    見たアニメのリンクは<a href = "../anime/anime_top.html">こちら！</a>
+                </h3>
             </div>
         </div> 
     </div>
